WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39981
REGRESSION(60409): window.onload never fires when using HTML5 parser
https://bugs.webkit.org/show_bug.cgi?id=39981
Summary
REGRESSION(60409): window.onload never fires when using HTML5 parser
Adam Barth
Reported
2010-05-31 21:33:14 PDT
REGRESSION(60409): window.onload never fires when using HTML5 parser
Attachments
Patch
(4.25 KB, patch)
2010-05-31 21:37 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2010-05-31 21:37:01 PDT
Created
attachment 57517
[details]
Patch
Adam Barth
Comment 2
2010-05-31 21:45:35 PDT
Comment on
attachment 57517
[details]
Patch ok. sorry for missing the "not" in the previous review.
Adam Barth
Comment 3
2010-05-31 21:50:49 PDT
Comment on
attachment 57517
[details]
Patch Clearing flags on attachment: 57517 Committed
r60461
: <
http://trac.webkit.org/changeset/60461
>
Adam Barth
Comment 4
2010-05-31 21:50:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug